# NativeImgui

./: .gitignore  README.md
ImguiSOBuild/: settings.gradle
ImguiSOBuild/app/: build.gradle
ImguiSOBuild/app/src/androidTest/java/com/netease/imguiUnity/: ExampleInstrumentedTest.java
ImguiSOBuild/app/src/main/: AndroidManifest.xml
ImguiSOBuild/app/src/main/cpp/: 1.txt  CMakeLists.txt
ImguiSOBuild/app/src/main/cpp/cimgui/: CMakeLists.txt  cimgui.cpp  cimgui.h
ImguiSOBuild/app/src/main/cpp/cimgui-freetype/: CMakeLists.txt
ImguiSOBuild/app/src/main/cpp/cimgui-freetype/freetype2/: CMakeLists.txt
ImguiSOBuild/app/src/main/cpp/cimgui-freetype/freetype2/builds/cmake/: FindHarfBuzz.cmake
ImguiSOBuild/app/src/main/cpp/cimgui-unity/: CMakeLists.txt  native-lib.cpp
ImguiSOBuild/app/src/main/cpp/cimgui/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_widgets.cpp
ImguiSOBuild/app/src/main/java/com/netease/imguiUnity/: MainActivity.java
ImguiSOBuild/app/src/main/res/values/: strings.xml  themes.xml
ImguiSOBuild/app/src/main/res/values-night/: themes.xml
ImguiSOBuild/app/src/test/java/com/netease/imguiUnity/: ExampleUnitTest.java
ImguiSOBuild/gradle/wrapper/: gradle-wrapper.properties
ImguiTest/: imgui.ini
ImguiTest/Assets/: DearImGuiDemo.cs
ImguiTest/Assets/ExampleAssets/Materials/: HardHat_Mat.mat
ImguiTest/Assets/Scenes/: SampleScene.unity
ImguiTest/Assets/Scripts/: ButtonTest.cs
ImguiTest/Assets/Settings/: ForwardRenderer.asset
ImguiTest/ProjectSettings/: ProjectSettings.asset
